namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: presentation-gitlab-k8s
spec: {}
